--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -71,7 +71,7 @@
     <footer>
         <dive class="footer">
             <p><em><strong>Navin Sroeurn</strong></em></p>
-            <p><em><strong>Visual Communication</strong></em></p>
+            <p><em><strong>Visual Communication Design</strong></em></p>
             <p><em><strong>San Francisco State University</strong></em></p>
             <a href="mailto:nsroeurn@mail.sfsu.edu">nsroeurn@mail.sfsu.edu</a>
         </dive>
