--- a/topFive/topfive.html
+++ b/topFive/topfive.html
@@ -23,33 +23,33 @@
       
     <main>
         <!-- First List -->
-        <h2>Favorite Video Games</h2>
+        <h2>TOP 5 FAVORITE VIDEO GAMES</h2>
         <section>
             
             <ul class="image-list">
                 <li>
-                    <a href="https://www.vainglorygame.com/">Vainglory</a>
+                    <a href="https://www.vainglorygame.com/">VAINGLORY</a>
                     <img class="pic"src="img/Van.jpg" alt="my first favouite game">
                     <p class="mid2">"Vainglory is a free-to-play video game with in-game purchases, developed and published by Super Evil Megacorp for iOS, Android and PC. The game is a version of the MOBA genre wherein two opposing teams of three or five players fight to destroy the enemy by controlling the path between the bases, which is lined by turrets and guarded by AI-controlled enemy creatures. This video game reminds me of my teenager time back in Cambodia.There were alot of memory of me and my friends played this video game everyday</p>
                 </li>
                 <li>
-                    <a href="https://www.pubgmobile.com/en-US/home.shtml">PUBG Mobile</a>
+                    <a href="https://www.pubgmobile.com/en-US/home.shtml">PUBG MOBILE</a>
                     <img src="img/pubG.jpg" alt="first game that I enjoy when move to the U.S.">                   
                     <p class="mid2">"PlayerUnknown's Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. The game is based on previous mods that were created by Brendan "PlayerUnknown" Greene for other games, inspired by the 2000 Japanese film Battle Royale, and expanded into a standalone game under Greene's creative direction. In the game, up to one hundred players parachute onto an island and scavenge for weapons. This game is the first game that I play when I move to the U.S. It was a great game that I enjoy playing to avoid from society because I have no friends here.</p>
                 </li>
                 <li>
-                    <a href="https://www.rockstargames.com/gta-v">Grand Theft Auto V</a>
+                    <a href="https://www.rockstargames.com/gta-v">GRAND THEFT AUTO V</a>
                     <img src="img/gd.jpg" alt="my first game that I play on my first PC">
                     <p class="mid2">"Grand Theft Auto V is a 2013 action-adventure game developed by Rockstar North and published by Rockstar Games. It is the first main entry in the Grand Theft Auto series since 2008's Grand Theft Auto IV. Set within the fictional state of San Andreas, based on Southern California, the single-player story follows three protagonists—retired bank robber Michael De Santa, street gangster Franklin Clinton, and drug dealer and arms smuggler Trevor Philips—and their efforts to commit heists while under pressure from a corrupt government agency and powerful criminals. This game is the first game that I play on my first PC that I build by myself. It was a great experience that I have ever had.</p>
                 </li>
                 <li>
-                    <a href="https://www.playstation.com/en-us/games/god-of-war-ragnarok/">God of War</a>
+                    <a href="https://www.playstation.com/en-us/games/god-of-war-ragnarok/">GOD OF WAR</a>
                     <img src="img/god.jpg" alt="my first game that i play on my first console">                  
                     <p class="mid2">"God
                     of War is a mythology-based action-adventure video game franchise. Created by David Jaffe at Sony's Santa Monica Studio, the series debuted in 2005 on the PlayStation 2 (PS2) video game console, and has become a flagship title for the PlayStation brand, consisting of eight games across multiple platforms. Based in ancient mythology, the story follows Kratos, a Spartan warrior who was tricked into killing his family by his former master, the Greek God of War Ares. This game is the first game that I play on my first console that I bought by myself. It was a great experience that I have ever had.</p>
                 </li>
                 <li>
-                    <a href="https://playvalorant.com/en-us/">Valorant</a>
+                    <a href="https://playvalorant.com/en-us/">VALORANT</a>
                     <img src="img/valr.jpg" alt="My first FPS game that I enjoy">             
                     <P class="mid2">"Valorant is a free-to-play multiplayer tactical first-person shooter developed and published by Riot Games, for Microsoft Windows. First teased under the codename Project A in October 2019, the game began a closed beta period with limited access on April 7, 2020, followed by official release on June 2, 2020. Valorant is a team-based tactical shooter and first-person shooter set in the near future. Players play as one of a set of agents, characters designed based on several countries and cultures around the world. In the main game mode, players are assigned to either the attacking or defending team with each team having five players on it. Agents have unique abilities and use an economic system to purchase their abilities and weapons.</p>
                 </li>
@@ -58,7 +58,7 @@
 
         <!-- Second List -->
         <section>
-            <h2>Inspiring Websites</h2>
+            <h2>TOP 5 DREAM CITIES TO VISIT </h2>
             <ul class="image-list2">
                 <li>
                     <a href="https://madparis.fr/en/" target="_blank">PARIS</a>
@@ -92,7 +92,7 @@
 
         <footer>
             <p><em><strong>Navin Sroeurn</strong></em></p>
-            <p><em><strong>Visual Communication</strong></em></p>
+            <p><em><strong>Visual Communication Design</strong></em></p>
             <p><em><strong>San Francisco State University</strong></em></p>
             <a href="mailto:nsroeurn@mail.sfsu.edu">nsroeurn@mail.sfsu.edu</a>
         </footer>
