--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -31,7 +31,7 @@
                 She is a great example of how to blend the old with the new. Lisa is an inspiration for
                 me to be in design major because one day I love to see my design collaborate with big companies
                 such as Adidas as she did. I want to share my culture thru degning to the world and let people
-                who Know Cambodia is an amazing place that they should go and see.</p>
+                who know Cambodia is an amazing place that they should go and see.</p>
             <a href="https://www.lisamam.com/">Learn more about Lisa Mam</a>
 
         </section>
@@ -40,13 +40,13 @@
             <img src="img/vannda.jpg.png" alt="">
             <p class="mid">He is a Cambodian rapper who inspires my life alot. One of his songs called <strong>Night
                     Thinker</strong>
-                always reminds me that I have my parent who always support me no matter what happens to me Most of his
+                always reminds me that I have my parent who always support me no matter what happens to me. Most of his
                 songs inspire
                 me every day to not give up on myself and everybody around me.There was a time when I was so down
                 because I failed so
                 many classes, and I thought about dropping out of school. Listening to that song reminds me that my
                 parents always support
-                me no matter what happens, so I need to keep going for myself and my parents There I am today still
+                me no matter what happens, so I need to keep going for myself and my parents. There I am today still
                 keeping going and becoming
                 better as a student in SFSU.</p>
             <a href="https://www.youtube.com/@VannDaOfficial19000">Listen to Vannda's music</a>
